--- a/src/head.html
+++ b/src/head.html
@@ -11,9 +11,10 @@
       margin: 8px;
     }
 
-    header h1 {
-      font-size: 2rem;
-      font-weight: normal;
+    header .main-title {
+      font-size: 1.5rem;
+      margin: 16px;
+      text-align: center;
     }
 
     header hr {
@@ -24,10 +25,9 @@
 
 <body>
   <header>
-    <h1 class="main-title">design-patterns-refactoring-guru</h1>
-    <div>
+    <div class="main-title">
       <a href="https://github.com/scraggo/design-patterns-refactoring-guru" rel="noopener"
-        target="_blank">https://github.com/scraggo/design-patterns-refactoring-guru</a>
+        target="_blank">design-patterns-refactoring-guru on github</a>
     </div>
     <hr />
   </header>
