Update docs styling

--- a/src/head.html
+++ b/src/head.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>design-patterns</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        margin: 8px;
+      }
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>design-patterns</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 8px;
-    }
+      header .main-title {
+        font-size: 1.5rem;
+        margin: 16px;
+        text-align: center;
+      }
 
-    header .main-title {
-      font-size: 1.5rem;
-      margin: 16px;
-      text-align: center;
-    }
+      main > section {
+        border-top: 1px solid grey;
+      }
+    </style>
+  </head>
 
-    header hr {
-      margin: 16px 0;
-    }
-  </style>
-</head>
-
-<body>
-  <header>
-    <div class="main-title">
-      <a href="https://github.com/scraggo/design-patterns-refactoring-guru" rel="noopener"
-        target="_blank">design-patterns-refactoring-guru on github</a>
-    </div>
-    <hr />
-  </header>
+  <body>
+    <header>
+      <div class="main-title">
+        <a
+          href="https://github.com/scraggo/design-patterns-refactoring-guru"
+          rel="noopener"
+          target="_blank"
+          >design-patterns-refactoring-guru on github</a
+        >
+      </div>
+    </header>
   <main>
